--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.9.2",
     "autoprefixer": "^10.4.21",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
