--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build
+        env:
+          NEXT_PUBLIC_PAYPAL_CLIENT_ID: AZ2bMj6Xao7XIjnX3e6DiVCRsZDduPleJQRNExQFoaxIO8S_8b3K0oAbii7O61rCm-tllymY72A1kTDg
+          NEXT_PUBLIC_FORMSPREE_ID: xanpdbya
       - uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
